crates/shipper/src/ops/git/snapshots/shipper__ops__git__context__snapshot_tests__dirty_working_tree.snap
---
source: crates/shipper-git/src/lib.rs
expression: ctx
---
commit: abc1234567890abc1234567890abc1234567890ab
branch: main
tag: ~
dirty: true
